# fertiscan-pipeline

./: .gitignore  README-FR.md  README.md  TESTING.md  all_inspections.pkl  analyze_label.py  byte_obj_data_creation.py  convert_inspection.py  data_creation.py  data_gen.py  end_to_end_pipeline.py  enhanced_OCR_performance_assessments.py  evaluation_results.txt  expected.json  performance_aggregation.py  performance_assessment.py  performance_test.py  prompt.txt  pyproject.toml  requirements.txt  script.py  script2.py  script3.py  script_for_testing_phone_numbers.py  setup.cfg  setup.py  test.ipynb  test_data.csv  test_data_output.csv  z.json  z1.json  z2.json
.devcontainer/: devcontainer.json
.github/workflows/: fertiscan-backend-workflows.yaml  workflows.yml
.zed/: settings.json
data/: README.md  with_dspy.csv
model/: __init__.py
notebooks/: README.md  Untitled.ipynb  metric.ipynb
pipeline/: README.md  __init__.py  form.py  gpt.py  inspection.py  label.py  ocr.py
pipeline/components/: __init__.py  label.py  ocr.py
pipeline/modules/: MainModule.py  __init__.py  main_module.py
pipeline/schemas/: __init__.py  inspection.py  settings.py
pipeline_new/: LanguageProgram.py  README.md  __init__.py
pipeline_new/components/: label.py  ocr.py
pipeline_new/modules/: LanguageProgram.py
pipeline_new/schemas/: inspection.py
pipeline_new/signatures/: Inspector.py
scripts/: README.md  run_full_performance_assessment.py  run_performance_assessment_data_visualization.py
scripts/data/: README.md  fetch_data.py  make_dataset.py  output.csv
scripts/depreciated/: end_to_end_pipeline.py  run_full_performance_assessment.py  run_performance_assessment_data_collection.py
scripts/evaluation/: evaluate.py  run_full_performance_assessment.py
scripts/optimization/: few_shot_optimization.py
test_data/: README.md
test_data/labels/label_001/: expected_output.json
test_data/labels/label_002/: expected_output.json
test_data/labels/label_003/: expected_output.json
test_data/labels/label_004/: expected_output.json
test_data/labels/label_005/: expected_output.json
test_data/labels/label_006/: expected_output.json
test_data/labels/label_007/: expected_output.json
test_data/labels/label_008/: expected_output.json
test_data/labels/label_009/: expected_output.json
test_data/labels/label_010/: expected_output.json
test_data/labels/label_011/: expected_output.json
test_data/labels/label_012/: expected_output.json
test_data/labels/label_013/: expected_output.json
tests/: __init__.py  test_form.py  test_gpt.py  test_inspection.py  test_label.py  test_ocr.py  test_performance_assessment.py  test_pipeline.py  test_script_evaluate.py  test_settings.py
(+22 files in other folders)
