[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "fertiscan_pipeline"
version = "0.1.0"
description = "A pipeline for the FertiScan project"
authors = [
    { name = "Albert Bryan Ndjeutcha", email = "albert.ndjeutcha@inspection.com" }
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

license = { file = "LICENSE" }

keywords = ["fertiscan","ailab"]

[tool.setuptools]
packages = ["fertiscan_pipeline"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
