[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fertiscan_pipeline"
version = "0.0.7"
description = "A pipeline for the FertiScan project"
authors = [
    { name = "Albert Bryan Ndjeutcha", email = "albert.ndjeutcha@inspection.gc.ca" },
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

license = { file = "LICENSE" }

keywords = ["fertiscan", "ailab"]

[tool.setuptools]
packages = [
    "pipeline",
    "pipeline.components",
    "pipeline.schemas",
    "pipeline.modules",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
