[metadata]
name = fertiscan_pipeline
version = 0.1.0
description = A Python package for the analysis pipeline in FertiScan.
author = Your Name
author_email = your.email@example.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
